Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-108843

[WebRTC] Crash inside RTCStatsCollector::ProduceAudioRTPStreamStats_n

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 6.2.7, 6.4.2
    • 6.4.1
    • WebEngine
    • None
    • macOS, Windows
    • 92b1bd7787 (qt/qtwebengine/6.4) 92b1bd7787 (qt/tqtc-qtwebengine/6.4) 46aad3d05b (qt/tqtc-qtwebengine/6.2.7)

      I've started experience a crash inside WebRTC after updating an app from Qt 6.3.2 to Qt 6.4.1.

      It seems as a bug in bundled Chromium/WebRTC version, see qtwebengine/src/3rdparty/chromium/third_party/webrtc/pc/rtc_stats_collector.cc

      Will be nice to have it fixed in 6.4.2

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            michal Michal Klocek
            studiosus Vladimir Belyavsky
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes